Test the use of hashFiles with empty strings
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -14,4 +14,4 @@ jobs:
   run-workflow-filled:
     uses: ./.github/workflows/wf.yaml
     with:
-      PBS: "path/to/script.sh"
+      PBS: "myscript.sh"
