Switch up the format to something less string-ish
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -8,4 +8,7 @@ jobs:
   run-workflow-filled:
     uses: ./.github/workflows/wf.yaml
     with:
-      PBS: "{python38: [test], python39: [test,lint]}"
+      PBS:
+        - code
+        - build
+        - lint
