Back to strings, I suppose
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -8,7 +8,5 @@ jobs:
   run-workflow-filled:
     uses: ./.github/workflows/wf.yaml
     with:
-      PBS:
-        - code
-        - build
-        - lint
+      PBS: >
+        {"versions": {"python38": ["build"], "python39": ["test", "lint"]}}
