Let's just do a list
I'm not cool enough for two independent dimensions.

Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -8,5 +8,4 @@ jobs:
   run-workflow-filled:
     uses: ./.github/workflows/wf.yaml
     with:
-      PBS: >
-        {"versions": {"python38": ["build"], "python39": ["test", "lint"]}}
+      PBS: '["build", "test"]'
