--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -5,7 +5,13 @@ on:
   push
 
 jobs:
-  run-workflow-filled:
-    uses: ./.github/workflows/wf.yaml
-    with:
-      PBS: '["build", "test"]'
+  version-check:
+    uses: ./.github/workflows/vc.yaml
+
+  conditional:
+    runs-on: ubuntu-latest
+    needs: version-check
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
